<resources>
    <string name="app_name">LED Resistor Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="single">Single</string>
    <string name="series">Series</string>
    <string name="parallel">Parallel</string>
    <string name="led_color">LED Type</string>
    <string name="voltage_input">Voltage Input</string>
    <string name="led_number">Led Number</string>
    <string name="led_voltage_v">LED Voltage(V)</string>
    <string name="calculate">Calculate</string>
    <string name="about">About</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="result">result</string>
    <string name="blank">_</string>
    <string name="company_name">HB Software</string>
    <string name="greeting">Greeting:</string>
    <string name="author">Author:</string>
    <string name="AuthorName">- Helal Uzzaman Hasib</string>
    <string name="attribution3">- Launch Icon resource from Flaticon(Flaticon.com).</string>
    <string name="attribution2">- Rishad Nur for assistance.</string>
    <string name="attribution1">- App Idea based on \'LED Resistor Calculator\' Jacksoft Labs(Google play store).</string>
    <string name="suggested">Suggested:</string>
    <string name="resistor_power_rating">Resistor Power Rating: </string>
    <string name="resistor_power_rating_info"><![CDATA[The Resistor Power Rating is sometimes called the Resistors Wattage Rating and is defined as the amount of heat that a resistive element can dissipate for an indefinite period of time without degrading its performance.]]></string>
    <string name="result_help_image">Result help image</string>
    <string name="schematics">Schematics:</string>
    <string name="general">General</string>
    <string name="dark_mode_summery">Reduce glare and improve night viewing</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="Mode_key">Mode</string>
    <string name="logo">Logo</string>
    <string name="Why">Why should use resistor?</string>
    <string name="Why_answer">Every LED is having a specific range of operating current, beyond the rated level of current it will damage. For the protection or limiting the current we simply use a resistor in series with it.</string>
    <!-- Preference Titles -->


</resources>